# codescope

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  USAGE.md
scripts/: install-skill.ps1
skill/: SKILL.md
src/: cfamily.rs  cli.rs  cmake.rs  context.rs  context_pack.rs  diagnostics.rs  graph.rs  lib.rs  lsp.rs  main.rs  markdown.rs  model.rs  output.rs  path_display.rs  python.rs  related.rs  related_tests.rs  replace.rs  semantic_rename.rs  workspace.rs  workspace_map.rs
tests/: cli.rs
