[package]
name = "codescope"
version = "0.1.11"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hlky/codescope"
description = "Symbol listing, extraction, references, callers, and context for Python, C-family, CMake, and Markdown files."

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
ignore = "0.4.23"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tree-sitter = "0.25.6"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-md-025 = "0.5.6"
tree-sitter-python = "0.23.6"
url = "2.5.7"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
tempfile = "3.20.0"
